# algorithm_practice

./: CMakeLists.txt
ds/linktable/: acwing826.cpp  acwing827.cpp
ds/stack/: acwing828.cpp  acwing830.cpp
search/bfs/: maze.cpp
search/dfs/: acwing842.cpp
syntax_review/: person.cpp  pointer.cpp  quote.cpp  一些技巧.md
syntax_review/cpp_class/: member_function.cpp
